--- a/kanban-board/src/main/resources/application.properties
+++ b/kanban-board/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #Database
-spring.datasource.url=jdbc:mysql://localhost:3306/kanban?characterEncoding=UTF-8&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/kanban?allowPublicKeyRetrieval=true&characterEncoding=UTF-8&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=mytolove123
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
